--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ Installation
 ```{r, echo = TRUE, eval = FALSE}
 library(devtools)
 devtools::install_github("jeremyrcoyle/origami")
-devtools::install_github("jeremyrcoyle/opttx")
+devtools::install_github("jeremyrcoyle/gasl")
 )
 ```
 
